test/1.2/errors/T_EAPPLY_4.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    /// ERROR EAPPLY

    // When is the len(funtype.output_type) > 1 error in ctree.py:2010
    // triggered?
}
